bpk-lib/crates/macbat/macros/tests/trybuild_negative/error_unterminated_brace.stderr
error: unterminated `{` in `#[error]` format string
 --> tests/trybuild_negative/error_unterminated_brace.rs:4:13
  |
4 |     #[error("bad {")]
  |             ^^^^^^^
