bpk-lib/crates/macbat/macros/tests/trybuild_negative/error_unterminated_brace.rs
use macbat::Error;
#[derive(Error)]
enum E {
    #[error("bad {")]
    V,
}
fn main() {}
